[package]
name = "rust_slim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
slim_protocol = {path = "../slim_protocol"}
convert_case = "0.6.0"
rust_slim_macros = {path = "../rust_slim_macros", optional = true}

[features]
macros = ["dep:rust_slim_macros"]
