[package]
name = "rust_slim"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Slim Server for acceptance tests in rust"
repository = "https://github.com/killertux/temoc/tree/master/rust_slim"
keywords = ["acceptance", "testing", "slim", "temoc", "fitnesse"]
categories = ["development-tools::testing"]
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slim_protocol = {path = "../slim_protocol"}
convert_case = "0.6.0"
rust_slim_macros = {path = "../rust_slim_macros", optional = true}
thiserror = "1"

[features]
macros = ["dep:rust_slim_macros"]
