[package]
name = "temoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.31"
clap = { version = "4", features = ["derive"] }
convert_case = "0.6.0"
markdown = "1.0.0-alpha.14"
toml = "0.8.8"
ulid = "1"
slim_protocol = { path = "../slim_protocol"}

[dev-dependencies]
rust_slim = { path = "../rust_slim/", features = ["macros"]}
