[package]
name = "temoc"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An Acceptance test executor"
repository = "https://github.com/killertux/temoc/"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.31"
clap = { version = "4", features = ["derive"] }
convert_case = "0.6.0"
markdown = "1.0.0-alpha.14"
toml = "0.8.8"
ulid = "1"
slim_protocol = { path = "../slim_protocol" }
regex = "1.10.5"
rand = "0.8.5"

[dev-dependencies]
rust_slim = { path = "../rust_slim/", features = ["macros"] }
